--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
+.app {
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 20px;
   text-align: center;
+  width: 80%;
+  margin: auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.dark-mode {
+  background-color: #333;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.timezone-list input,
+.timezone-list button,
+.timezone-item button {
+  margin: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.slider-component {
+  margin: 20px 0;
+}
+
+.time-display {
+  display: flex;
+  justify-content: space-between;
+}
+
+.timezone-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  border: 1px solid #ccc;
+  margin: 5px;
+}
+
+.timezone-item p {
+  margin: 0;
+}
+
+.timezone-item button {
+  background: none;
+  border: none;
+  font-size: 1.5em;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+.date-picker {
+  margin: 20px 0;
 }
