--- a/src/App.css
+++ b/src/App.css
@@ -1,52 +1,69 @@
 .app {
-  font-family: Arial, Helvetica, sans-serif;
-  padding: 20px;
-  text-align: center;
-  width: 80%;
-  margin: auto;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 20px;
+    text-align: center;
+    width: 80%;
+    margin: auto;
 }
 
 .dark-mode {
-  background-color: #333;
-  color: white;
+    background-color: #333;
+    color: white;
 }
 
 .timezone-list input,
 .timezone-list button,
 .timezone-item button {
-  margin: 5px;
+    margin: 5px;
 }
 
 .slider-component {
-  margin: 20px 0;
+    margin: 20px 0;
+}
+
+.horizontal-slider {
+    width: 200px;
+    border: 2px solid red;
+}
+
+.thumbDiv {
+    width: 20px;
+    height: 20px;
+    background-color: aqua;
+}
+
+.trackDiv {
+    width: 100%;
+    height: 10px;
+    background-color: yellow;
 }
 
 .time-display {
-  display: flex;
-  justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 }
 
 .timezone-item {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px;
-  border: 1px solid #ccc;
-  margin: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    border: 1px solid #ccc;
+    margin: 5px;
 }
 
 .timezone-item p {
-  margin: 0;
+    margin: 0;
 }
 
 .timezone-item button {
-  background: none;
-  border: none;
-  font-size: 1.5em;
-  padding: 5px 10px;
-  cursor: pointer;
+    background: none;
+    border: none;
+    font-size: 1.5em;
+    padding: 5px 10px;
+    cursor: pointer;
 }
 
 .date-picker {
-  margin: 20px 0;
+    margin: 20px 0;
 }
